<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#66FF0000"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sorryErrorOccured"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/sorryErrorOccured" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sorryErrorOccured"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/status"
            android:layout_below="@+id/status"
            android:layout_marginTop="8dp"
            android:text="@string/message"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/status"
            android:layout_alignBottom="@+id/status"
            android:layout_toRightOf="@+id/status"
            android:text="@string/none" />

        <TextView
            android:id="@+id/messageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/message"
            android:layout_alignBottom="@+id/message"
            android:layout_toRightOf="@+id/message"
            android:text="@string/none" />

        <Button
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message"
            android:layout_centerHorizontal="true"
            android:text="@string/retry" />
    </RelativeLayout>

</LinearLayout>