<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp" >

    <TextView
        android:id="@+id/resortName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/none"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/regionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resortName"
        android:layout_below="@+id/resortName"
        android:layout_marginTop="5dp"
        android:text="@string/none" />

    <TextView
        android:id="@+id/newFallValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/regionName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:text="@string/none"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/newFall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/regionName"
        android:layout_alignRight="@+id/newFallValue"
        android:text="@string/newFall" />

    <TextView
        android:id="@+id/onTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newFall"
        android:layout_alignBottom="@+id/newFall"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@+id/newFall"
        android:text="@string/onTop" />

    <TextView
        android:id="@+id/onTopValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newFallValue"
        android:layout_alignBottom="@+id/newFallValue"
        android:layout_alignRight="@+id/onTop"
        android:text="@string/none"
        android:textStyle="bold" />

</RelativeLayout>